# cppnet

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/app/: cppnet_client.cpp  cppnet_server.cpp
src/client/: TCPClient.cpp  TCPClient.h  TCPConnector.cpp  TCPConnector.h
src/lib/: Epoll.cpp  Epoll.h  EventFD.cpp  EventFD.h  IOHandler.cpp  IOHandler.h  ITCPHandler.h  Logger.cpp  Logger.h  MessageProcessor.cpp  MessageProcessor.h  Socket.cpp  Socket.h  TCPConnection.cpp  TCPConnection.h  TCPDataParser.cpp  TCPDataParser.h  UniqueFD.h
src/server/: ITCPServerHandler.h  TCPListener.cpp  TCPListener.h  TCPServer.cpp  TCPServer.h
tests/: EventFDTests.cpp  IOHandlerTests.cpp  TCPDataParserTests.cpp  TCPIntegrationTests.cpp  TestUtils.h  UniqueFDTests.cpp
